site: Extend 3e0f28839f91f81cdfd01def9df4d7863d8811c7

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -112,9 +112,11 @@
                     <p>You know how to mark and copy text. But do you know how to paste it?<br>
                     It is "[Apple command key] + [v]" (<a class="moz-txt-link-freetext" href="https://support.apple.com/en-us/HT209651">https://support.apple.com/en-us/HT209651</a>), or [Ctrl] + [v] everywhere else.</p>
 
-                    <p><u>Example Text for copy:</u></p>
+                    <p><u>Example Text for copy:</u> <sup>(*)</sup></p>
 
                     <p><pre><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus nisi sit amet turpis placerat lacinia sit amet at lacus. Cras nec porta nisi. Aliquam lobortis nisi eget turpis blandit rhoncus. Cras placerat accumsan lacus, tristique pellentesque tortor condimentum ut. In hac habitasse platea dictumst. Integer fermentum, velit a vehicula porttitor, leo nunc imperdiet est, vitae imperdiet ipsum velit a sapien. Nulla quis justo in magna porttitor sodales eu non sapien. Sed consequat lectus diam, vehicula dictum nulla. Sed rutrum mollis enim, in posuere tortor congue sed. Duis ante arcu, bibendum sit amet eleifend ac, molestie eget elit. Integer risus lacus, dapibus ut commodo eu, laoreet at odio. Curabitur varius, urna ac tincidunt gravida, eros dui consectetur nunc, euismod consequat turpis urna non libero.</code></pre></p>
+
+                    <p><sup>(*)</sup> PLEASE NOTE: When you copy text from HTML pages like this page, it has the downside that you also copy the inner belonging HTML tags. When you have a plain text editor and you there paste the selected text, no tags are shown. But In this case, pasting to a RichText Editor, the HTML-tags are ported. For this special lecture case we do not want this behaviour. For luck there is another keyboard command available to paste text without belonging HTML-tags. This is the keyboard shortcut [Shift] - [Command-Option] - [v]. With this command you can paste the text that you want with the original formatting stripped out.</p>
 
                     <p>Paste the copied text to your new entry.<br>
                     Click on the blog editors "Source" button and view the result.<br>
