site: Improve 0c5149d23e3f3fcd69d874a8154ef1d05edcc216 list Number 9

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -200,9 +200,13 @@
                         <li>Run N° 6 again for the fourth image to add</li>
                         <li>Run N° 6 again for the fifth image to add</li>
                         <li>Scrolling down again, place your cursor into the last available line.<br>
+                        You now have two options:<br>
                         Hit RETURN-key ("ENTER"). (<em>Editor line jumps down.</em>)<br>
                         Hit BACKSPACE-key. (<em>Editor line jumps up again.</em>)<br>
-                        Insert text for paragraph. (<em>no additional space or line after that</em>)</li>
+                         Insert text for paragraph. (<em>no additional space or line after that</em>)<br>
+                        <strong>or better</strong> (<em>which is described in the following variant section</em>):<br>
+                        Delete the additional added space in the last line with your keyboards BACKSPACE key<br>
+                        Then insert text for paragraph. (<em>no additional space or line after that</em>)</li>
                     </ol>
 
                     <p>Now you can either view the HTML source code by the [ <em><strong>Source</strong></em> ] button or view the entries lookalike by the Serendipity "preview" button, next to the "Save" button.</p>
