site: Improve 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -220,12 +220,14 @@
 
                     <p><u><strong>HOWTO guide for some testing learning entries:</strong></u></p>
 
-                    <p>There are several VALID ways to start a new blog entry.</p>
+                    <p>&nbsp;</p>
+
+                    <p><u><strong>HOWTO guide for some lecture learning test entries:</strong></u></p>
 
                     <ul>
                         <li>Place cursor in your body field and start writing your first text block,</li>
                         <li>Place cursor in the body field with keyboard actions first before actually writing,</li>
-                        <li>Place cursor in the body field with keyboard actions first before adding an image.</li>
+                        <li>Place cursor in the body field <strong>w/o</strong> keyboard actions first before adding an image.</li>
                     </ul>
 
                     <p>Assuming you want to start with a paragraph’ed textblock, then add 5 images and want to end the entry with another paragraph’ed textblock.</p>
