site: Add a linebreak for resume... in 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -235,7 +235,8 @@
                         <li>Place cursor at text start and hit RETURN-key ("ENTER") (<em>Editor line jumps down</em>).<br>
                         Then hit BACKSPACE-key (<em>Editor line jumps up again</em>).<br>
                         Do not view by SOURCE at this moment and wait doing this.... It now is paragraph’ed.</li>
-                        <li>This was starting a text block without keyboard-actions first. The other was already described in Stockholm Lecture Lessons I. Now we resume.</li>
+                        <li>This was starting a text block without keyboard-actions first. The other was already described in Stockholm Lecture Lessons I.<br>
+                        Now we resume.</li>
                         <li>Place cursor at text end.<br>
                         Hit the keyboard RETURN-key ("ENTER").<br>
                         Then select an image to the entry.</li>
