site: More p in 4ce99e59a09c52cdc3fb73cec3a4dc06db177dfe

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -104,13 +104,15 @@
                     <h2>A preface about HTML and RichText Editors</h2>
 
                     <p>HTML RichText editors are self-contained Javascript programs. They are as good as their creators and programmers intended and developed them to be at the current state.<br />
-                    Since they are "external" parts of programs, their structures are naturally generic and not always necessarily compatible with the needs of the framework they use.<br />
-                    It is therefore generally advisable to acquire certain techniques and structures for the use of such RichText editors.<br />
-                    These editors translate their actions and formatting into HTML. HTML is a structured language. Therefore, it is imperative that over time you understand HTML at least in some basic way so that you can evaluate it.</p>
+                    Since they are "external" parts of programs, their structures are naturally generic and not always necessarily compatible with the needs of the framework in which they are used.</p>
 
-                    <p>Practice with some examples how the editor behaves under certain circumstances. So better start rather simple and then expand your exercises on time to more enriched examples like images etc.</p>
+                    <p>It is therefore generally advisable to acquire certain techniques and structures for the use of such RichText editors.</p>
 
-                    <p>Investigate what effects your actions have in "Source" mode. Therefore it is good to know that there are HTML tags that must always be closed and others that can stand alone.<br />
+                    <p>These editors translate their actions and formatting into HTML. HTML is a structured language. Therefore, it is imperative that over time you understand HTML at least in some basic way so that you can evaluate it.</p>
+
+                    <p>Practice with some examples how the editor behaves under certain circumstances. So better start rather simple and then expand your exercises on time to more enriched examples like adding images etc.</p>
+
+                    <p>Investigate what effects your actions have in "Source" mode. Therefore it is good to know that there are HTML tags that must always be closed (in most cases) and (rarely) others that can stand alone.<br />
                     Example of the former is "bold text" (<code>strong</code>-tag). Example for the latter are simple "images" (<code>img</code>-tag).</p>
 
                     <p>It is also important to know that certain tags have a semantic meaning, i.e. predefined properties, and others do not. The <code>p</code>-tag that encloses a paragraph is an example of the former, the classic and frequently used <code>div</code>-tag an example of the latter.<br />
