site: Improve conclusion for 4ce99e59a09c52cdc3fb73cec3a4dc06db177dfe

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -286,15 +286,20 @@
 
                     <p>Checking the written or added content by the RichText-Editors "Source" button will always quickly show you that you have worked the right way or not.</p>
 
-                    <h3>Good to know:</h3>
+                    <p>&nbsp;</p>
+
+                    <h3>Good to know conclusions</h3>
 
                     <p>There are cases where this EDITOR and YOU can get into conflicts. Assume you write text with images and then you notice that an image was not the one you really wanted to have - OR - it would better look when placed somewhere else - and so on.</p>
 
-                    <p>First to say. It is good to have some knowledge how good HTML structure items look alike working together. For this and the case of repair you have the RichText-Editors "Source"-button. It is <strong>always</strong> much more easy and exact and the recommended way to <strong>cut</strong> and <strong>paste</strong> a (<em>nested</em>) image block from one place to another when you are inside the <strong>Source-View-mode</strong>. Doing this or even deleting image blocks within the RichText-Editor (preview) mode is very much Error-prone and HTML element leftovers will probably survive your action(s), which then might even destroy or leaving artifacts when continue working or saving your entry like this.</p>
+                    <p>First to say: As mentioned it is good to have some knowledge how good HTML structure items look alike working together. For this and the case of repair you have the RichText-Editors "Source"-button. It is <strong>always</strong> much more easy and exact and the recommended way to <strong>cut</strong> and <strong>paste</strong> a (<em>nested</em>) image block from one place to another when you are inside the <strong>Source-View-mode</strong>. Doing this or even deleting image blocks within the RichText-Editor (preview) mode is very much Error-prone and HTML element leftovers will probably survive your action(s), which then might even destroy or leaving artifacts when you continue working or save the entry at this point.</p>
 
                     <p>At this state is is good to know that this RichText-Editor has a "butler" (which is called "ACF"). This "butler" checks for (un-)valid code and then tries to repair it. These repairs don't always look like clean and straight HTML, but are at least valid, since unbroken. These automatic ACF (<em>cleanup</em>) actions always happen when you switch between the <em><strong>RichText-view-mode</strong></em> and the <em><strong>Source-view-mode</strong></em> and vice versa <strong>and</strong> when you <strong>save</strong> your entry.</p>
 
-                    <p>To be continued...</p>
+                    <p><em>To be continued...</em></p>
+
+                    <p>&nbsp;</p>
+
                 </div>
             </div>
         </div>
