site: Improve 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -263,10 +263,12 @@
 
                     <p>Now you can either view the HTML source code by the [ <em><strong>Source</strong></em> ] button or view the entries lookalike by the Serendipity "preview" button, next to the "Save" button.</p>
 
-                    <p>All good? Save the entry! Or try again to learn this behaviour more and better.</p>
+                    <p>All good? Save the entry! Or try again to learn this behaviour more and better and start over.</p>
 
                     <p>The <strong>magical red line</strong> is something very good to have when you work with this RichText-Editor.<br>
                     It always appears (<em>or is available</em>), when you are inside a somehow nested element block of the (<em>inner</em>) HTML source and you need to get out of this element block to start a new (<em>nested or not</em>) item block. Each item, like an image or a text block, is a (<em>nested or not</em>) HTML-block. It does not matter how long or short the value is. So this appears valid for a short image comment too, as long you are inside the RichText Editor. (<em>This being said because you can give text comments to images too while ordering the image itself. You might have noticed before. But we come back to this in later lessons.</em>)</p>
+
+                    <p>&nbsp;</p>
 
                     <h3>Another variant:</h3>
 
