site: Improve Variant howto in 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -275,7 +275,8 @@
                     <p>Assuming you want to start with an image.</p>
 
                     <ol>
-                        <li>Place cursor to the (<em>empty</em>) body field and hit the RETURN-("ENTER")-keyboard key (<em>Editor line jumps down</em>).</li>
+                        <li>Place cursor to the (<em>empty</em>) body field and hit the RETURN-("ENTER")-keyboard key (<em>Editor line jumps down</em>). Then hit BACKSPACE-key (Editor line jumps up again).<br>
+                        - OR -</li>
                         <li>Order and select the image. It appears.</li>
                         <li>Now watch the red magic line appearance right below image end. To close this first image block and run another image block, hit the red line (<em>your editors line jumps down again</em>).</li>
                         <li>Order and select another image.</li>
